examples/test/testpolicy15224.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15224
  namespace: namespace261
spec:
  podSelector:
    matchLabels:
      key22: value38
      key1: value38
      key7: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value14
          key17: value8
      podSelector:
        matchLabels:
          key44: value10
          key9: value36
